# AlKamelTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: MainWindow.cpp  MainWindow.h
network/: AlkamelClient.cpp  AlkamelClient.h  AlkamelSession.cpp  AlkamelSession.h  AppConfig.cpp  AppConfig.h  ProtocolMessage.cpp  ProtocolParser.cpp  ProtocolSerializer.cpp  ProtocolSerializer.h
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/domain/: ClassificationBuilder.cpp  ClassificationBuilder.h  RaceState.cpp  RaceState.h
src/network/: AlkamelClient.h  AlkamelSession.cpp  AlkamelSession.h  AppConfig.cpp  AppConfig.h  ProtocolMessage.h  ProtocolParser.cpp  ProtocolParser.h  ProtocolSerializer.cpp
src/state/: JsonStateStore.cpp  JsonStateStore.h
src/ui/: ClassificationTableModel.cpp  ClassificationTableModel.h
tests/domain/: ClassificationBuilderTests.cpp
tests/state/: JsonStateStoreTests.cpp
